--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -260,6 +260,9 @@
   KlaviyoSubscribe.attachToForms('#footer-newsletter', {
     hide_form_on_success: false
   });
+  KlaviyoSubscribe.attachToForms('#seventh-tile-newsletter', {
+    hide_form_on_success: false
+  });
 //
 //   Variables
 //
