add max width to last tile heading

--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -424,10 +424,14 @@
   }
 
   h1#last-tile-heading{
-    font-size:75px;
+    font-size:72px;
     color:#00945e;
     top:160px;
     line-height:75px;
+    max-width: 425px;
+    left:0;
+    right:0;
+    margin:auto;
   }
 
   h1#seventh-tile-heading{
