--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -46,10 +46,10 @@
             <object data='{{ 'panel-' | append: i | append: '.svg' | asset_url }}' class='desktop-only'></object>
           {% elsif i == 7 %}
             <div id="seventh-tile-content">
-              <div id="last-tile-content">
+              
                 <h1 id="seventh-tile-heading">Stay In The Loop!</h1>
                 <h2 id="seventh-tile-subheading">Sign up for special discounts, updates, and more.</h2>
-              </div>
+              
               <form id='seventh-tile-newsletter' action="//manage.kmail-lists.com/subscriptions/subscribe" data-ajax-submit="//manage.kmail-lists.com/ajax/subscriptions/subscribe" method="GET" target="_blank" novalidate="novalidate">
                 <input type="hidden" name="g" value="{{ section.settings.klaviyo }}">
                 <input type="hidden" name="$fields" value="$consent">
@@ -69,9 +69,9 @@
           {% elsif i == 8 %}
             <object data='{{ 'panel-2.svg' | asset_url }}' class='desktop-only'></object>
           {% elsif i == 9 %}
-            <div id="last-tile-content">
-              <h1 id="last-tile-heading">You Can't Go Wrong!</h1>
-              <h2 id="last-tile-subheading">All the flavor, all the fun, no artificial junk.</h2>
+            <div id="ninth-tile-content">
+              <h1 id="ninth-tile-heading">You Can't Go Wrong!</h1>
+              <h2 id="ninth-tile-subheading">All the flavor, all the fun, no artificial junk.</h2>
             </div>
             <object data='{{ 'panel-3.svg' | asset_url }}' class='desktop-only'></object>
           {% endif %}
@@ -416,18 +416,18 @@
   }
   {% comment %} ADDED BY DG 6/16/22 {% endcomment %}
 
-  h1#last-tile-heading, h1#seventh-tile-heading{
+  h1#ninth-tile-heading, h1#seventh-tile-heading{
     text-align:center;
     position:absolute;
     font-family: "Hornbill";
     padding: 0 50px;
+    top:185px;
   }
 
-  h1#last-tile-heading{
+  h1#ninth-tile-heading{
     font-size:72px;
     color:#00945e;
-    top:160px;
-    line-height:75px;
+    line-height:72px;
     max-width: 425px;
     left:0;
     right:0;
@@ -435,34 +435,31 @@
   }
 
   h1#seventh-tile-heading{
-    font-size:60px;
+    font-size:50px;
     color:#00a7e1;
-    top:210px;
-    line-height:75px;
+    line-height:72px;
   }
 
 
-  h2#last-tile-subheading, h2#seventh-tile-subheading{
-    
+  h2#ninth-tile-subheading, h2#seventh-tile-subheading{
     font-size:22px;
     text-align:center;
     position:absolute;
     padding: 0 60px;
+    top:450px;
   }
 
-  h2#last-tile-subheading{
+  h2#ninth-tile-subheading{
     color:#00945e;
-    top:450px;
   }
 
   h2#seventh-tile-subheading{
     color:#00a7e1;
-    top:475px;
   }
 
   form#seventh-tile-newsletter{
     position:absolute;
-    top:400px;
+    top:375px;
     width:100%;
   }
 
