--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -217,6 +217,9 @@
   .wave-product:nth-child(n + 6) {
     color: #76236c;
   }
+  .wave-product:nth-child(n + 7) {
+    color: var(--orange-color);
+  }
   
   .wave-product .atc {
     color: white;
@@ -241,6 +244,9 @@
   
   .wave-product:nth-child(n + 6) .atc {
     background-color: #76236c;
+  }
+  .wave-product:nth-child(n + 7) .atc {
+    background-color: var(--orange-color);
   }
   
   .wave-product:hover img{
