--- a/snippets/bsub-widget.liquid
+++ b/snippets/bsub-widget.liquid
@@ -40,12 +40,12 @@
             <div class="bsub-widget__group-header {{ product.id }}" data-one-time onClick="$('[data-bsub-purchase-option-one-time]:not({{product.id}})').click(); $('.subscription-discount').hide(); $('.normal-discount').show()">
               <div class="bsub-widget__text">
                 <span>One-time Purchase</span>
-                {% if product.title == "5PM Happy Hour Kit (DG)" %}
+                {% if product.id == 7745391984878 %}
                   {% assign new_base_price = 29.99 %}
                 {% else %}
                   {% assign new_base_price = base_price %}
                 {% endif %}
-                <span>{% if triple == 'yes' %}{{ product.price | times: 3 | money }}{% else %}{% unless show_base_price == 'no' or product.title == "5PM Happy Hour Kit (DG)" %}<span class='cross-out normal-discount' style='display:none;'>{{ new_base_price }}</span>{% endunless %}{{ product.price | money }}{% endif %}</span>
+                <span>{% if triple == 'yes' %}{{ product.price | times: 3 | money }}{% else %}{% unless show_base_price == 'no' or product.id == 7745391984878 %}<span class='cross-out normal-discount' style='display:none;'>{{ new_base_price }}</span>{% endunless %}{{ product.price | money }}{% endif %}</span>
                 <!-- {{ 'products.product.one_time_purchase' | t }} -->
               </div>
             </div>
